--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     image: redis:latest
     container_name: redis
     restart: always
-    command: redis-server --requirepass admin-survey --appendonly yes
+    command: redis-server --requirepass xxxxxxxxxxxxxxxxxx --appendonly yes
     ports:
       - 6379:6379
     networks:
       - backend-services-network
 
   survey-reports-api:
-    image: charandetkrathok/survey-reports-api:latest
+    image: xxxxxxxxxxxxxxxxxxxx
     container_name: survey-reports-api
     restart: always
     depends_on:
@@ -27,5 +27,5 @@ networks:
 
      
 # docker run --restart=always  -d --name survey -p 8881:8881 survey-reports-api:latest
-# docker run --name survey-reports-api-redis -p 6379:6379 redis:latest redis-server --requirepass "admin-survey"
+# docker run --name survey-reports-api-redis -p 6379:6379 redis:latest redis-server --requirepass "xxxxxxxxxxxxxxxx"
 
